--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,6 @@ edition = "2024"
 rig-core = "0.9.1"
 schemars = "0.8.22"
 serde = { version = "1.0.218", features = ["derive"] }
+serde_json = "1.0.140"
 tokio = { version = "1.43.0", features = ["macros"] }
 tokio-test = "0.4.4"
